# SmartRedis

./: .gitignore  .pylintrc  CMakeLists.txt  Makefile  README.md  codecov.yml  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_test_env.sh  smartredis_defs.cmake
.github/: release.yml
.github/workflows/: build_wheels.yml  changelog.yml  docker.yml  release.yml  run_one_off.yml  run_post_merge_tests.yml  run_static_and_examples.yml  run_tests.yml  run_tests_uds.yml
archive/: slurm_cluster.py
build-scripts/: build-catch.sh  build_c_tests.sh  build_cpp_cov.sh  build_cpp_tests.sh  build_cpp_unit_tests.sh  build_deps.sh  build_fortran_tests.sh  build_lib.sh
cmake/: Config.smartredis-fortran.cmake.in  Config.smartredis.cmake.in  EnableCoverage.cmake
doc/: advanced_data_structures.rst  advanced_topics.rst  changelog.md  changelog.rst  conf.py  data_structures.rst  dataset-conversions.rst  dataset_conversions.rst  index.rst  installation.rst  overview.rst  runtime.rst  testing.rst
doc/clients/: c-plus.rst  c.rst  fortran.rst  python.rst
doc/developer/: testing.rst
doc/examples/: cpp_api_examples.rst  fortran_api_examples.rst  python_api_examples.rst
doc/install/: docker.rst  lib.rst  python_client.rst
examples/: CMakeLists.txt  test_examples.py
examples/parallel/: CMakeLists.txt
examples/parallel/cpp/: CMakeLists.txt  smartredis_mnist.cpp  smartredis_put_get_3D.cpp
examples/parallel/fortran/: CMakeLists.txt  example_utils.F90  smartredis_dataset.F90  smartredis_mnist.F90  smartredis_put_get_3D.F90
examples/serial/: CMakeLists.txt
examples/serial/c/: CMakeLists.txt  example_put_get_3D.c  example_put_unpack_1D.c
examples/serial/fortran/: CMakeLists.txt  smartredis_dataset.F90  smartredis_put_get_3D.F90
images/: Dockerfile
include/: address.h  addressallcommand.h  addressanycommand.h  addressatcommand.h  c_client.h  c_configoptions.h  c_dataset.h  c_logcontext.h  c_logger.h  client.h  clusterinfocommand.h  command.h  command.tcc  commandlist.h  commandlist.tcc  commandreply.h  compoundcommand.h  configoptions.h  dataset.h  dbinfocommand.h  dbnode.h  enum_fortran.inc  gettensorcommand.h  keyedcommand.h  logcontext.h  logger.h  metadata.h  metadatabuffer.h  metadatafield.h  multikeycommand.h  nonkeyedcommand.h  pipelinereply.h  pyclient.h  pyconfigoptions.h  pydataset.h  pylogcontext.h  pysrobject.h  redis.h  rediscluster.h  redisserver.h  (+16 more)
src/c/: c_client.cpp  c_configoptions.cpp  c_dataset.cpp  c_error.cpp  c_logcontext.cpp  c_logger.cpp
src/cpp/: address.cpp  addressallcommand.cpp  addressanycommand.cpp  addressatcommand.cpp  client.cpp  clusterinfocommand.cpp  command.cpp  commandlist.cpp  commandreply.cpp  compoundcommand.cpp  configoptions.cpp  dataset.cpp  dbinfocommand.cpp  dbnode.cpp  gettensorcommand.cpp  keyedcommand.cpp  logger.cpp  metadata.cpp  metadatafield.cpp  multikeycommand.cpp  nonkeyedcommand.cpp  pipelinereply.cpp  redis.cpp  rediscluster.cpp  redisserver.cpp  singlekeycommand.cpp  srobject.cpp  stringfield.cpp  tensorbase.cpp  tensorpack.cpp  threadpool.cpp  utility.cpp
src/fortran/: client.F90  configoptions.F90  dataset.F90  errors.F90  fortran_c_interop.F90  logcontext.F90  logger.F90
tests/: CMakeLists.txt
tests/c/: CMakeLists.txt  c_client_test_utils.h  client_test_dataset_aggregation.c  client_test_dataset_exists.c  client_test_logging.c  client_test_put_get_1D.c  client_test_put_get_2D.c  client_test_put_get_3D.c  client_test_put_unpack_1D.c  test_c_client.py  test_raw.c
tests/cpp/: CMakeLists.txt  client_test_copy_dataset.cpp  client_test_dataset.cpp  client_test_dataset_aggregation.cpp  client_test_dataset_copy_assignment.cpp  client_test_dataset_copy_constructor.cpp  client_test_dataset_empty.cpp  client_test_dataset_move_assignment.cpp  client_test_dataset_move_constructor.cpp  client_test_dataset_multiple_get_tensor.cpp  client_test_dataset_no_meta.cpp  client_test_dataset_no_tensors.cpp  client_test_delete_dataset.cpp  client_test_ensemble.cpp  client_test_ensemble_dataset.cpp  client_test_mnist.cpp  client_test_mnist_dataset.cpp  client_test_put_get_1D.cpp  client_test_put_get_2D.cpp  client_test_put_get_3D.cpp  client_test_put_get_3D_static_values.cpp  client_test_put_get_bytes.cpp  client_test_put_get_contiguous_3D.cpp  client_test_put_get_transpose_3D.cpp  client_test_rename_dataset.cpp  client_test_utils.h  dataset_test_utils.h  test_cpp_client.py
tests/cpp/unit-tests/: CMakeLists.txt  main.cpp  test_addressanycommand.cpp  test_addressatcommand.cpp  test_aggregation_list.cpp  test_client.cpp  test_client_ensemble.cpp  test_client_prefixing.cpp  test_clusterinfocommand.cpp  test_commandlist.cpp  test_commandreply.cpp  test_compoundcommand.cpp  test_configopts.cpp  test_dataset.cpp  test_dbinfocommand.cpp  test_dbnode.cpp  test_logger.cpp  test_metadata.cpp  test_multikeycommand.cpp  test_redis.cpp  test_redisserver.cpp  test_singlekeycommand.cpp  test_ssdb.cpp  test_stringfield.cpp  test_tensor.cpp  test_tensorbase.cpp  test_unit_cpp_client.py
tests/docker/: CMakeLists.txt
tests/fortran/: CMakeLists.txt  client_test_configoptions.F90  client_test_dataset.F90  client_test_dataset_aggregation.F90  client_test_ensemble.F90  client_test_errors.F90  client_test_initialized.F90  client_test_logging.F90  client_test_misc_tensor.F90  client_test_mnist.F90  client_test_mnist_multigpu.F90  client_test_prefixing.F90  client_test_put_get_1D.F90  client_test_put_get_2D.F90  client_test_put_get_3D.F90  client_test_put_get_unpack_dataset.F90  test_fortran_client.py  test_utils.F90
tests/python/: test_address.py  test_client.py  test_configoptions.py  test_dataset_aggregation.py  test_dataset_conversion.py  test_dataset_methods.py  test_dataset_ops.py  test_errors.py  test_logging.py  test_model_methods_torch.py  test_nonkeyed_cmd.py  test_prefixing.py  test_put_get_bytes.py  test_put_get_dataset.py  test_put_get_tensor.py  test_script_methods.py  test_tensor_ops.py
utils/: check_redis.sh  launch_redis.py
utils/create_cluster/: local_cluster.py  slurm_cluster.py
(+64 files in other folders)
